--- a/deployment-file.yml
+++ b/deployment-file.yml
@@ -1,5 +1,3 @@
 template-file-path: autoscaling-automation.yml
-parameters:
-  - parameter-key: KeyName
-    parameter-value: vpc-lab-ec2-key-pair
+parameters: {}
 tags: {}
