--- a/deployment-file.yml
+++ b/deployment-file.yml
@@ -1,3 +1,5 @@
 template-file-path: autoscaling-automation.yml
-parameters: {}
+parameters:
+  - parameter-key: KeyName
+    parameter-value: vpc-lab-ec2-key-pair
 tags: {}
