--- a/autoscaling-automation.yml
+++ b/autoscaling-automation.yml
@@ -27,15 +27,15 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Week3AsgVpc
-      CidrBlock: 12.0.3.0/24
-      AvailabilityZoneId: eu1-az2
+      CidrBlock: 10.0.1.0/24
+      AvailabilityZoneId: euc1-az2
 
   Week3PublicSubnet1b:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Week3AsgVpc
-      CidrBlock: 12.0.5.0/24
-      AvailabilityZoneId: eu1-az3
+      CidrBlock: 10.0.3.0/24
+      AvailabilityZoneId: euc1-az3
 
   Week3RouteTable:
     Type: AWS::EC2::RouteTable
@@ -52,7 +52,7 @@ Resources:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref Week3RouteTable
-      SubnetId: Week3PublicSubnet1bWeek3PublicSubnet1bWeek3PublicSubnet1b
+      SubnetId: Week3PublicSubnet1b
 
   DefaultRoute:
     Type: AWS::EC2::Route
@@ -74,15 +74,14 @@ Resources:
   Week3AlbSgHttp:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Allow http requests
+      GroupDescription: Allow HTTP requests
       GroupName: week3-alb-sb-http
-      SecurityGroupEgress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-      SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
       VpcId: !Ref Week3AsgVpc
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
 
   Week3Alb:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
@@ -93,6 +92,10 @@ Resources:
       SecurityGroups:
         - !Ref Week3AlbSgHttp
       Type: application
+      Subnets:
+        - !Ref Week3PublicSubnet1a
+        - !Ref Week3PublicSubnet1b
+
 
   Week3AlbListener:
     Type: AWS::ElasticLoadBalancingV2::Listener
@@ -100,7 +103,7 @@ Resources:
       DefaultActions:
         Type: forward
         TargetGroupArn: !Ref Week3TargetGroup
-      LoadBalancerArn: !Ref Week3AlbSgHttp
+      LoadBalancerArn: !Ref Week3Alb
       Port: 80
       Protocol: HTTP
 
@@ -112,8 +115,11 @@ Resources:
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
+          FromPort: 22
           ToPort: 22
       VpcId: !Ref Week3AsgVpc
 
