--- a/autoscaling-automation.yml
+++ b/autoscaling-automation.yml
@@ -134,7 +134,7 @@ Resources:
         SecurityGroupIds:
           - !Ref Week3LtSg
         UserData:
-          Fn::Base64: !Sub |
+          Fn::Base64: |
             #!/bin/bash
             yum update -y
             yum install -y httpd stress
